--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "accounting": "^0.4.1",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
+    "mapbox-gl": "^2.9.1",
     "maplibre-gl": "^2.1.9",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.2.0",
@@ -24,6 +25,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scroll": "^1.8.7",
+    "react-scroll-to-top": "^1.0.8",
     "react-to-print": "^2.14.7",
     "react-tooltip": "^4.2.21",
     "redux": "^4.2.0"
