--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^3.8.0",
     "mapbox-gl": "^2.9.1",
     "maplibre-gl": "^2.1.9",
+    "mathjs": "^11.2.1",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.0.0",
@@ -33,12 +34,16 @@
   "devDependencies": {
     "@babel/core": "^7.18.13",
     "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "@vitest/coverage-c8": "^0.23.4",
     "autoprefixer": "^10.4.7",
     "babel-jest": "^29.0.1",
-    "jest": "^29.0.1",
+    "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
     "vite": "^2.9.9"
