--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
     "@testing-library/react": "^13.4.0",
+    "@types/google.maps": "^3.50.4",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
