--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@iconify/react": "^3.2.2",
+    "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.8.6",
     "@reduxjs/toolkit": "^1.8.2",
     "accounting": "^0.4.1",
