--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.9.3",
     "@iconify/react": "^3.2.2",
     "@mui/material": "^5.8.6",
+    "@react-google-maps/api": "^2.17.1",
     "@reduxjs/toolkit": "^1.8.2",
     "accounting": "^0.4.1",
     "axios": "^0.27.2",
