--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react": "^18.0.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.0.0",
-    "react-quilljs": "^1.3.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.6.1",
     "react-scroll": "^1.8.7",
