--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.0.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.0.0",
+    "react-pdf": "^6.2.2",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.6.1",
@@ -46,6 +47,6 @@
     "jest-environment-jsdom": "^29.1.2",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4",
-    "vite": "^2.9.9"
+    "vite": "^4.2.1"
   }
 }
