--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-scroll": "^1.8.7",
     "react-to-print": "^2.14.7",
     "react-tooltip": "^4.2.21",
-    "redux": "^4.2.0"
+    "redux": "^4.2.0",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
