--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "accounting": "^0.4.1",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
+    "file-saver": "^2.0.5",
     "mathjs": "^11.2.1",
     "react": "^18.0.0",
     "react-chartjs-2": "^4.2.0",
@@ -30,7 +31,8 @@
     "react-to-print": "^2.14.7",
     "react-tooltip": "^4.2.21",
     "redux": "^4.2.0",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
