--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@vitejs/plugin-react": "^1.3.0",
     "@vitest/coverage-c8": "^0.23.4",
     "autoprefixer": "^10.4.7",
+    "axios-mock-adapter": "^1.21.4",
     "babel-jest": "^29.0.1",
     "babel-plugin-transform-vite-meta-env": "^1.0.3",
     "jest": "^29.5.0",
