--- a/package.json
+++ b/package.json
@@ -36,13 +36,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-env": "^7.22.7",
+    "@babel/preset-react": "^7.22.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/google.maps": "^3.50.4",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.4.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^1.3.0",
     "@vitest/coverage-c8": "^0.23.4",
     "autoprefixer": "^10.4.7",
@@ -52,8 +54,10 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.1.2",
     "postcss": "^8.4.14",
-    "react-testing-library": "^8.0.1",
     "tailwindcss": "^3.1.4",
-    "vite": "^4.2.1"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6",
+    "vite": "^4.2.1",
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
