--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-react": "^7.22.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/accounting": "^0.4.2",
     "@types/google.maps": "^3.50.4",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.4.1",
