--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react": "^18.0.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.0.0",
-    "react-pdf": "^6.2.2",
+    "react-pdf": "^7.3.3",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.6.1",
@@ -46,6 +46,7 @@
     "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/react-pdf": "^7.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "@vitest/coverage-c8": "^0.23.4",
     "autoprefixer": "^10.4.7",
