--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/react-pdf": "^7.0.0",
+    "@types/react-scroll": "^1.8.7",
     "@vitejs/plugin-react": "^1.3.0",
     "@vitest/coverage-c8": "^0.23.4",
     "autoprefixer": "^10.4.7",
